<resources>
    <string name="app_name">Chic Secret</string>

    <!-- General -->
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="unlock">Unlock</string>
    <string name="error">Error</string>
    <string name="wrong_password">Wrong password</string>
    <string name="icons">Icons</string>
    <string name="more_icons">More Icons</string>
    <string name="colors">Colors</string>
    <string name="more_colors">More Colors</string>

    <!-- Vault -->
    <string name="vaults">Vaults</string>
    <string name="new_vault">New Vault</string>
    <string name="add_vault">Adding a vault</string>
    <string name="new_vault_explanation_master_password">This password is very important, it will be used to encrypt all the passwords you will store in this vault. Please be sure to keep in mind this password. If you lose it, it will be impossible for us to retrieve your passwords in this vault.</string>
    <string name="new_vault_error_name_empty">The name must not be empty</string>
    <string name="new_vault_error_password_too_small">The password must be at least 6 characters</string>
    <string name="new_vault_error_password_not_identical">The passwords must be the same</string>
    <string name="item_vault_icon_description">Vault\'s lock</string>
    <string name="unlock_vault">Unlock Vault</string>

    <!-- Entry -->
    <string name="passwords">Passwords</string>
    <string name="add_entry">Add entry</string>

    <!-- Category -->
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="add_category">Add category</string>
    <string name="new_category">New Category</string>

    <!-- Health -->
    <string name="health">Health</string>

    <!-- Settings -->
    <string name="settings">Settings</string>


</resources>